<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pantry System</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="title_activity_inventory_add_item">Add Item</string>
    <string name="title_activity_recipe">Recipes</string>
    <string name="title_activity_recipes_add_new_recipe">Recipe Editor</string>
    
    <string name="title_activity_select_item">Select Ingredient</string><string name="title_activity_add_item">Add Item</string><string name="button_recipes">Recipes</string>
    <string name="button_inventory">Inventory</string>
    <string name="button_expired_items">Expired Items</string><string name="button_add">Add</string><string name="button_remove">Remove</string><string name="button_edit">Edit</string><string name="button_delete">Delete</string><string name="button_input_date">Set Date</string><string name="button_check">Check</string><string name="button_change_ingredient">Change Ingredient</string><string name="button_change_quantity">Change Quantity</string><string name="button_remove_ingredient">Remove</string><string name="button_change">Change</string><string name="button_ok">OK</string><string name="button_cancel">Cancel</string><string name="error_positive_number">Please input a positive number.</string>
    <string name="error_date_format">The expiration date isn\'t formatted correctly.\n\nThis shouldn\'t happen.</string><string name="inventory_button_add_item">Add Item</string>
    <string name="inventory_button_add_new_item">Add New Item</string>
    <string name="inventory_list_name">Item</string>
    <string name="inventory_list_expiration_date">Expiration Date</string>
    <string name="inventory_list_quantity">Qty.</string>
    <string name="inventory_item_selected_prompt">Do what with this item?</string>
    <string name="inventory_item_selected_add">Add</string>
    <string name="inventory_item_selected_remove">Remove</string>
    <string name="inventory_item_selected_modify">Modify</string>
    <string name="inventory_item_selected_delete">Delete</string>
    <string name="recipes_button_add_new_recipe">Add New Recipe</string>
    <string name="recipes_name">Name</string>
    <string name="recipes_ingredients">Ingredients</string>
    <string name="recipes_inventory">Inventory</string>
    <string name="recipes_button_add_recipe">Add Recipe</string>
    <string name="recipes_button_add_ingredient">Add Ingredient</string>
    <string name="default_item_quantity">1</string>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

</resources>
