<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pantrysystem.RecipesAddNewRecipeActivity" >
    
    <LinearLayout 
        android:layout_weight="4"
        android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:orientation="vertical">
        
        <EditText android:id="@+id/add_recipe_name_input"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        android:inputType="text"
	        android:hint="@string/recipes_name"/>
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipes_ingredients" />
        
        <LinearLayout
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal" >
            
            <TextView 
	            android:layout_weight="1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/inventory_list_name" />
	        
	        <TextView 
	            android:layout_weight="4"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/inventory_list_quantity" />
            
        </LinearLayout>
        
        <ListView
	        android:id="@+id/ingredients_list"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:padding="5dp" />
        
    </LinearLayout>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/recipes_button_add_ingredient"
        android:onClick="addIngredient" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/recipes_button_add_recipe"
        android:onClick="addRecipe" />

</LinearLayout>
